[package]
name = "ucsc_menu"
version = "0.1.0"
edition = "2021"

[profile.test]
# opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full", "rt-multi-thread", "tracing"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "full"] }
juniper_hyper = "0.9.0"
pretty_env_logger = "0.5.0"
log = "0.4.21"
juniper = { version = "0.16.1", features = ["schema-language", "chrono"] }
reqwest = { version = "0.11.27", features = ["gzip"] }
scraper = "0.19.0"
bitflags = "2.5.0"
rusty-money = { version = "0.4.1", features = ["iso"] }
chrono = { version = "0.4.37", features = ["serde"] }
url = "2.5.0"
futures = "0.3.30"
serde_json = "1.0.116"
regex = "1.10.4"
serde = "1.0.199"
serde_with = "3.8.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
console-subscriber = "0.2.0"
governor = "0.6.3"
firestore = "0.41.0"
async-compression = { version = "0.4.9", features = ["gzip"] }
futures-locks = "0.7.1"
ouroboros = "0.18.3"

[dev-dependencies]
opentelemetry = "0.22.0"
task-local-extensions = "0.1.4"
tokio-scoped = "0.2.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.18"
