[package]
name = "ucsc_menu"
version = "0.1.0"
edition = "2021"
# opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "signal",
    "sync",
] }
reqwest = { version = "0.11.27", default-features = false, features = [
    "rustls-tls",
    "gzip",
] }
juniper = { version = "0.16.1", features = ["schema-language", "chrono"] }
hyper = { version = "1", features = ["full"] }
scraper = "0.19.0"
bitflags = "2.5.0"
rusty-money = { version = "0.4.1", features = ["iso"] }
chrono = { version = "0.4.37", features = ["serde"] }
url = "2.5.0"
futures = "0.3.30"
serde_json = "1.0.116"
regex = "1.10.4"
serde = "1.0.199"
tracing = "0.1.40"
governor = "0.6.3"
firestore = "0.41.0"
futures-locks = "0.7.1"
juniper_axum = { version = "0.1.0", features = ["subscriptions"] }
axum = { version = "0.7.5", features = [
    "http1",
    "http2",
    "json",
    "ws",
], default-features = false }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tokio-scoped = "0.2.0"
tower-http = { version = "0.5.2", features = ["compression-full"] }
juniper_graphql_ws = "0.4.0"
pretty_env_logger = "0.5.0"
log = { version = "0.4.21" }

[dev-dependencies]
opentelemetry = "0.22.0"
task-local-extensions = "0.1.4"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.18"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.mimalloc]
version = "0.1"
default-features = false
